public/style.css
:root {
    --dark-purple: #480080;
    --light-purple: #d654f3;
    --purple: #9a00bd;
    --light-gray:  #f7f7f7;
    --gray: #dddddd;
    --dark-gray: #bababa;
    --black: #222222;
    --black-secondary: #444444;
    --white: #fcfcfc;
}

body, html {
    height: 100svh;
    margin: 0;
    background-color: var(--white);
    font-family: 'Ubuntu', Tahoma, Verdana, sans-serif;
    font-weight: 400;
    overflow-x: hidden;
    color: var(--white);
    font-size: 16px;
}

.no-select {
    -webkit-tap-highlight-color: transparent;
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}
.no-select:focus {
    outline: none !important;
}

p {
    margin: 0;
    white-space: pre-line;
}

a {
    text-decoration: none;
    outline: none;
    box-shadow: none;
    border: none;
    -webkit-tap-highlight-color: transparent;
}

a img {
    display: block;
    outline: none;
    box-shadow: none;
    border: none;
}

.hidden {
    display: none !important;
}

@font-face {
    font-family: 'Roboto';
    font-style: normal;
    font-weight: 900;
    font-display: swap;
    src: url(https://static.kannatan.fi/KFOlCnqEu92Fr1MmYUtvAw.ttf) format('truetype');
}
@font-face {
    font-family: 'Ubuntu';
    font-style: normal;
    font-weight: 300;
    font-display: swap;
    src: url(https://static.kannatan.fi/4iCv6KVjbNBYlgoC1CzTtw.ttf) format('truetype');
}
@font-face {
    font-family: 'Ubuntu';
    font-style: normal;
    font-weight: 400;
    font-display: swap;
    src: url(https://static.kannatan.fi/4iCs6KVjbNBYlgo6eA.ttf) format('truetype');
}

a {
    text-decoration: none;
}

#root {
    display: flex;
    flex-direction: column;
    height: 100%;
}

#root.frontPage {
    justify-content: center;
    align-items: center;
}

.chat {
    width: 100%;
    margin: 0px auto;
    border-radius: 8px;
    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
    background-color: var(--light-gray);
    overflow: hidden;
    display: flex;
    flex-direction: column;
    height: 100svh;
    margin-bottom: 0rem;
}

@media (min-width: 1024px) and (pointer: fine) {
    .chat {
        max-width: 60vw;
    }
}

.chat img {
    margin-left: 1.5rem;
    width: 12vw;
    height: 12vw;
    border-radius: 0.5rem;

}
@media (min-width: 1024px) and (pointer: fine) {
    .chat img  {
        width: 8vw;
        height: 8vw;
        border-radius: 1rem;
    }
}
.conversation {
    flex: 1;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    margin-top: 1rem;
    overflow-y: auto;
    scroll-behavior: smooth;
    scrollbar-width: none;
}
.conversation::-webkit-scrollbar {
    display: none; /* Chrome, Safari, Edge, etc. */
}
.conversation .message {
    display: flex;
    flex-direction: row;
    min-width: 80%;
    max-width: 80%;
    align-self: center;
}
.conversation .message .content {
    margin: 0.5rem 1.5rem 0.5rem 1.5rem;
    padding: 1rem 2rem 1rem 2rem;
    border-radius: 20px;
    font-size: 1.1rem;
}
.conversation .message.user .content {
    background-color: var(--purple);
    color: var(--white);
    box-shadow: 3px 3px 3px var(--dark-gray);
}
.conversation .message.assistant .content {
    background-color: var(--white);
    color: var(--black);
    box-shadow: -3px 3px 3px var(--gray);
    outline: 0.5px solid var(--gray);
}
.conversation .message .thumbs {
    display: flex;
    align-self: end;
    justify-self: end;
}
.conversation .message.pending .thumbs {
    display: none;
}
.conversation .message.pending .content {
    opacity: 0.5;
}
@media (min-width: 1024px) and (pointer: fine) {
    .conversation .message .content {
        font-size: 1.2rem;
        font-weight: 300;
        max-width: 60%;
        min-width: 5px;
    }
    .conversation .message.user .content {
        align-self: flex-end;
    }
    .conversation .message.assistant .content {
        align-self: flex-start;
    }
}

.buttons {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    margin: 0.5rem 0 0.5rem 0;
    width: 100%;
}

.button {
    margin: 0 0.5rem 0.5rem 0.5rem;
    padding: 1rem 1rem;
    border-radius: 20px;
    font-family: 'Ubuntu', Tahoma, Verdana, sans-serif;
    font-size: 0.8rem;
    background-color: var(--white);
    color: var(--black);
    box-shadow: -3px 3px 3px var(--gray);
    border: 0.5px solid var(--gray);
    cursor: pointer;
    font-weight: 400;
}

.button:hover {
    background-color: var(--light-purple);
    color: var(--white);
}

.button.selected {
    background-color: var(--purple);
    color: var(--white);
}

@media (min-width: 1024px) and (pointer: fine) {
    .buttons {
        max-width: 75%;
    }
    .button {
        font-weight: 300;
    }

}
.inputContainer {
    display: flex;
    padding: 1rem 1rem 0.5rem 1rem;
    gap: 1.5em;
}
.inputContainer input {
    flex-grow: 1;
    flex-shrink: 1;
    min-width: 0;
    padding: 1rem 2rem;
    border: 1px solid var(--gray);
    border-radius: 20px;
    outline: none;
    font-size: 1.1rem;
}
@media (min-width: 1024px) and (pointer: fine) {
    .inputContainer input {
        font-family: 'Ubuntu', Tahoma, Verdana, sans-serif;
        font-size: 1.2rem;
        font-weight: 300;
    }
}
.inputContainer button {
    flex-grow: 0;
    flex-shrink: 0;
    padding: 1rem 1.5rem;
    background-color: var(--purple);
    color: var(--white);
    border: none;
    border-radius: 20px;
    cursor: pointer;
    font-size: 1.1rem;
}
@media (min-width: 1024px) and (pointer: fine) {
    .inputContainer button {
        font-size: 1.2rem;
    }
    .inputContainer button:hover {
        background-color:var(--light-purple);
    }
}

h3 {
    font-size: 2rem;
    color: var(--purple);
    font-family: 'Ubuntu', Tahoma, Verdana, sans-serif;
    font-weight: 900;
    text-align: center;
    margin: 1rem;
    text-shadow: 1px 1px 2px var(--dark-gray);
}

h4 {
    font-size: 1rem;
    color: var(--dark-purple);
    font-family: 'Ubuntu', Tahoma, Verdana, sans-serif;
    font-weight: 900;
    text-align: center;
    margin: 1rem;
}

@media (min-width: 1024px) and (pointer: fine) {
    h3 {
        font-size: 4rem;
    }
    h4 {
        font-size: 2rem;
    }
}

.title-container {
    display: flex;
    align-items: center;
    margin-bottom: 2rem;
}

.title-container div {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-left: 0.5rem;
}

.title-container div * {
    margin: 0;
}

.vote-box {
    width: 4rem;
    height: 4rem;
    align-self: center;
}

@media (min-width: 1024px) and (pointer: fine) {
    .title-container div {
        align-items: flex-start; /* Aligns text to the left */
    }

    .vote-box {
        width: 5.5rem;
        height: 5.5rem;
    }
}

.mobileLineBreak {
    display: block;
}

.partySelect {
    width: 36svh;
    height: 72svh;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 0.5rem;
}
@media (min-width: 1024px) and (pointer: fine)  {
    .partySelect  {
        width: 60vw;
        grid-template-columns: repeat(4, 1fr);
    }
    .mobileLineBreak {
        display: none;
    }
}

.party {
    position: relative;
    width: 100%;
    height: 100%;
    overflow: hidden;
    border-radius: 1rem;
    box-shadow: 0 0 20px 0 var(--gray);
}

.party-character {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.party-logo {
    position: absolute;
    bottom: 7.5px;
    right: 7.5px;
    width: 40%;
    height: 40%;
    object-fit: contain;
    opacity: 1.;
    background-color: rgba(255, 255, 255, 0.75);
    box-shadow: 0 0 20px 20px rgba(255, 255, 255, 0.75);
}

@media (min-width: 1024px) and (pointer: fine)  {
    .img-container img {
        transition: opacity 0.25s ease-in-out;
    }

    .party-logo {
        width: 100%;
        height: 100%;
        bottom: 0;
        right: 0;
        opacity: 0;
        padding: 10px;
        box-sizing: border-box;
        background-color: var(--white);
        border-radius: 0;
        box-shadow: none;
    }

    .img-container:hover .party-character {
        opacity: 0;
    }
    
    .img-container:hover .party-logo {
        opacity: 1;
    }
}

a.disabled {
    pointer-events: none;
    opacity: 0.2;
}

#profileImage:hover {
    filter: grayscale(0%) sepia(30%) hue-rotate(200deg) saturate(120%);
    cursor: pointer;
}

.about-link img {
    position: absolute;
    bottom: 5px;
    right: 5px;
    width: 25px;
    height: 25px;
    filter: brightness(0) saturate(100%) invert(84%) sepia(0%) saturate(96%) hue-rotate(273deg) brightness(90%) contrast(88%);
}

@media (min-width: 1024px) and (pointer: fine)  {
    .about-link img {
        bottom: 10px;
        right: 10px;
        width: 50px;
        height: 50px;
    }
    
}

.about {
    width: 90%;
    margin: 3rem auto;
    border-radius: 8px;
    display: flex;
    flex-direction: column;
    height: 100svh;
}

@media (min-width: 1024px) and (pointer: fine) {
    .about {
        max-width: 60vw;
        height: 95svh;
    }
}

.sub-header {
    font-size: 1.2rem;
    color: var(--black);
    text-align: center;
    margin-bottom: 2rem;
}
.sub-header a {
    font-size: 1.2rem;
    color: var(--purple);
}

@media(hover: hover) and (pointer: fine) {
    .sub-header a:hover {
        color: var(--dark-purple);
    }
}

